[package]
name = "socketio"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
description = "A socket.io client library in Rust."
readme = "README.md"
repository = "https://github.com/NeoLegends/socketio-rs"
keywords = ["socket", "socketio", "socket.io", "websocket"]
license = "MITNFA"

[dependencies]
engineio = { git = "https://github.com/NeoLegends/engineio-rs" }
rustc-serialize = "0.3.*"
url = "1.1.*"

[features]
default = []
ssl = ["engineio/ssl"]